src/test/ui/feature-gates/feature-gate-exhaustive-patterns.stderr
error[E0005]: refutable pattern in local binding: `Err(_)` not covered
  --> $DIR/feature-gate-exhaustive-patterns.rs:16:9
   |
LL |     let Ok(_x) = foo(); //~ ERROR refutable pattern in local binding
   |         ^^^^^^ pattern `Err(_)` not covered

error: aborting due to previous error

For more information about this error, try `rustc --explain E0005`.
